# bazarki

./: .gitignore  README.md  pyproject.toml  server.py
bazarek/: main.py
bazarek.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
client/: package.json
client/public/: index.html
client/src/: About.js  App.js  Comparator.js  ComparePage.js  GetFromTwitterPage.js
