[tool.poetry]
name = "bazarek"
version = "0.1.0"
description = ""
authors = ["Franciszek Madej <f.madej@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
twitterscraper = "^1.4"
flask = "^1.1"
gunicorn = "^20.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
